--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>21st</title>
+    <title>Home</title>
 </head>
-<body>
 
-    <h1>Dashboard</h1>
-    
-    <body>
+ <body>
         <nav class="navbar">
             <div class="navdiv">
                 <ul>
@@ -27,7 +24,63 @@
             </div>
         </nav>
 
-        
+        <div class="members-section">
+            <h2>Our Team Members</h2>
+            <div class="members-container">
+                <div class="member-card">
+                    <img src="https://i.ibb.co/b5VCdDg/462572807-1260650758596623-7138040671590824249-n.jpg" alt="Sayieeh Hwang">
+                    <h3>Gonzales, Djeian Kyle Gabriel A.</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member2.jpg" alt="Member 2">
+                    <h3>Huan, Joshdado L.</h3>
+                </div>
+                <div class="member-card">
+                    <img src="https://i.ibb.co/pvYMyhk/me.jpg" alt="Member 3">
+                    <h3>Hwang, Sayieeh T.</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member1.jpg" alt="Member 4">
+                    <h3>Member 4</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member2.jpg" alt="Member 5">
+                    <h3>Member 5</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member3.jpg" alt="Member 6">
+                    <h3>Member 6</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member1.jpg" alt="Member 7">
+                    <h3>Member 7</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member2.jpg" alt="Member 8">
+                    <h3>Member 8</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member3.jpg" alt="Member 9">
+                    <h3>Member 9</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member1.jpg" alt="Member 10">
+                    <h3>Member 10</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member2.jpg" alt="Member 11">
+                    <h3>Member 11</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member3.jpg" alt="Member 12">
+                    <h3>Member 12</h3>
+                </div>
+                <div class="member-card">
+                    <img src="images/member3.jpg" alt="Member 13">
+                    <h3>Member 13</h3>
+                </div>
+            </div>
+        </div>
 
 </body>
 </html>
