--- a/symbolism.html
+++ b/symbolism.html
@@ -4,13 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/symbolism.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>21st</title>
+    <title>Symbolism</title>
 </head>
 <body>
-
-    <h1>Dashboard</h1>
-    
-    <body>
         <nav class="navbar">
             <div class="navdiv">
                 <ul>
