--- a/symbolism.html
+++ b/symbolism.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/symbolism.css">
+    <link rel="stylesheet" href="css/theme.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Symbolism</title>
+    <title>Characters</title>
 </head>
 <body>
         <nav class="navbar">
@@ -18,7 +18,6 @@
                     <li><a href="symbolism.html">Symbolism</a></li>
                     <li><a href="pov.html">Point of View</a></li>
                     <li><a href="theme.html">Theme</a></li>
-                    <li><a href="members.html">Members</a></li>
                 </ul>
             </div>
         </nav>
