--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,8 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="navbar">
+    <!--NAVBAR-->
+    <nav id="navbar" class="navbar">
         <div class="navdiv">
             <ul>
                 <li><a href="dashboard.html">Home</a></li>
@@ -22,6 +23,8 @@
             </ul>
         </div>
     </nav>
+
+    <!--INTRODUCTION-->
 
     <div class="intro">
         <h1>Story Analysis</h1>
@@ -40,21 +43,26 @@
                 The world where online personas often oppose real-life identities is the<br>
                 background of the story that touches on the issues of anonymity,<br>
                 accountability, and the moral problems of internet culture.<br><br>
-                
-                This analysis will talk about the story's main parts such as themes, <br>
-                characters, and narrative style, so the concealed messages and their <br>
-                significance in present times can be revealed.</p>
+            </p>
         </div>
-        <pre>
-
-        </pre>
+        <div class="d">
+            <p>
+            This analysis will talk about the story's main parts such as themes, <br>
+            characters, and narrative style, so the concealed messages and their <br>
+            significance in present times can be revealed.</p>
+        </div>
+        <div class="button">
+        <a href="#member" class="button">OUR MEMBERS</a>
+        </div>
     </div>
     
-    <div class="members-section">
+    <!--MEMBERS SECTION-->
+
+    <div id="member" class="members-section">
         <h2>Our Team Members</h2>
         <div class="members-container">
             <div class="member-card">
-                <img src="https://i.ibb.co/b5VCdDg/462572807-1260650758596623-7138040671590824249-n.jpg" alt="Sayieeh Hwang">
+                <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.15752-9/462567806_1122167389392194_6288248639645013066_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeHGgCPmHrUdzFUSNkLsaScuns4SLUjvjDiezhItSO-MOEURQXe71dBgPwccor_17D09UzUbfGgKq2eguIJpMjnN&_nc_ohc=I1mvQRhbqBUQ7kNvgFbunaw&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-1.xx&oh=03_Q7cD1QHdilLV67pCIdhYqH7gXV0tKi_Gh7s0vL3Z94iD8Qothw&oe=67694519" alt="Sayieeh Hwang">
                 <h3>Gonzales, Djeian Kyle Gabriel A.</h3>
             </div>
             <div class="member-card">
@@ -107,6 +115,8 @@
             </div>
         </div>
     </div>
+
+    <!--FOOTER-->
 
     <footer>
         <div class="footer">
