--- a/dashboard.html
+++ b/dashboard.html
@@ -99,7 +99,7 @@
             </div>
             <div class="member-card">
                 <img src="https://i.ibb.co/5cztxYh/bb114945-9190-45c7-aa21-0837289ef013.jpg" alt="Member 10">
-                <h3>Garcia Amiel Jonathan (Masarap)</h3>
+                <h3>Garcia, Amiel Jonathan</h3>
             </div>
             <div class="member-card">
                 <img src="https://i.ibb.co/jzq5JC0/image.png" alt="Member 11">
@@ -111,7 +111,15 @@
             </div>
             <div class="member-card">
                 <img src="https://i.ibb.co/BKMVBh1/image.png" alt="Member 13">
-                <h3>Mamayabay Cordero Britney Jane</h3>
+                <h3>Mamayabay, Britney Jane C.</h3>
+            </div>
+            <div class="member-card">
+                <img src="" alt="Member 14">
+                <h3>Acap, </h3>
+            </div>
+            <div class="member-card">
+                <img src="" alt="Member 15">
+                <h3>Agustin, </h3>
             </div>
         </div>
     </div>
