--- a/characters.html
+++ b/characters.html
@@ -12,6 +12,7 @@
         <div class="navdiv">
             <ul>
                 <li><a href="dashboard.html">Home</a></li>
+                <li><a href="story.html">Read Story</a></li>
                 <li><a href="plot.html">Plot</a></li>
                 <li><a href="setting.html">Setting</a></li>
                 <li><a href="characters.html">Characters</a></li>
