--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
         <div class="navdiv">
             <ul>
                 <li><a href="dashboard.html">Home</a></li>
+                <li><a href="story.html">Read Story</a></li>
                 <li><a href="plot.html">Plot</a></li>
                 <li><a href="setting.html">Setting</a></li>
                 <li><a href="characters.html">Characters</a></li>
@@ -55,6 +56,15 @@
         <a href="#member" class="button">OUR MEMBERS</a>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
     
     <!--MEMBERS SECTION-->
 
@@ -98,7 +108,7 @@
                 <h3>Rosel, Bella P.</h3>
             </div>
             <div class="member-card">
-                <img src="https://i.ibb.co/5cztxYh/bb114945-9190-45c7-aa21-0837289ef013.jpg" alt="Member 10">
+                <img src="https://scontent.fmnl30-2.fna.fbcdn.net/v/t1.15752-9/462562559_9069531526400932_1198284866367586582_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeGFiW8RUvYpKyywrnaxdFQ3GNanQ2l3gtsY1qdDaXeC2_zcfwpR9UySNww5yv5-_b4QQkpRTvemjnybShzY8_Cy&_nc_ohc=67l755hUvt4Q7kNvgG-XpiL&_nc_zt=23&_nc_ht=scontent.fmnl30-2.fna&oh=03_Q7cD1QHvwVENIs-fc_jVwo35DoQ8XVm6XpML1lZHGXBTB-LGSQ&oe=676A38B3" alt="Member 10">
                 <h3>Garcia, Amiel Jonathan</h3>
             </div>
             <div class="member-card">
@@ -118,11 +128,13 @@
                 <h3>Acap, </h3>
             </div>
             <div class="member-card">
-                <img src="" alt="Member 15">
+                <img src="https://media.discordapp.net/attachments/1288083043671605299/1310098999411478629/received_1686368732165124.jpg?ex=6743fc45&is=6742aac5&hm=6d20213635354b1efd1df0c00b5951db0781095462cfcfbf696a5a9b6b0274a3&=&format=webp&width=351&height=468" alt="Member 15">
                 <h3>Agustin, </h3>
             </div>
         </div>
     </div>
+
+
 
     <!--FOOTER-->
 
