--- a/theme.html
+++ b/theme.html
@@ -4,13 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/theme.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Characters</title>
+    <title>Theme</title>
 </head>
 <body>
         <nav class="navbar">
             <div class="navdiv">
                 <ul>
                     <li><a href="dashboard.html">Home</a></li>
+                    <li><a href="story.html">Read Story</a></li>
                     <li><a href="plot.html">Plot</a></li>
                     <li><a href="setting.html">Setting</a></li>
                     <li><a href="characters.html">Characters</a></li>
