--- a/symbolism.html
+++ b/symbolism.html
@@ -2,15 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/symbolism.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Characters</title>
+    <title>Symbolism</title>
 </head>
 <body>
         <nav class="navbar">
             <div class="navdiv">
                 <ul>
                     <li><a href="dashboard.html">Home</a></li>
+                    <li><a href="story.html">Read Story</a></li>
                     <li><a href="plot.html">Plot</a></li>
                     <li><a href="setting.html">Setting</a></li>
                     <li><a href="characters.html">Characters</a></li>
