--- a/characters.html
+++ b/characters.html
@@ -200,30 +200,51 @@ html {
             <div class="team-member member-1">
                 <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 1">
                 <div class="info">
-                    <h2>Kiko</h2>
-                    <p>Snarky and has a foul mouth when talking.</p>
+                    <h2>The Narrator/Protagonis</h2>
+                    <p>A college graduate struggling to find purpose and meaning, eventually employed as an online troll by TAYO Networking Inc.</p>
                 </div>
             </div>
             <div class="team-member member-2">
                 <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 2">
                 <div class="info">
-                    <h2>Jessy</h2>
-                    <p> always dramatic</p>
+                    <h2>The Narrator’s Mother</h2>
+                    <p>A supportive but initially demanding figure who pushes the narrator toward a more stable career.</p>
                 </div>
             </div>
             <div class="team-member member-3">
                 <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 3">
                 <div class="info">
-                    <h2>Romy</h2>
-                    <p>Cheerful and happy</p>
+                    <h2>Receptionist at TAYO Networking Inc</h2>
+                    <p>A cheerful guide who escorts the narrator to the interview and sets the tone of professionalism for the company.</p>
                 </div>
             </div>
             <div class="team-member member-4">
                 <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 4">
                 <div class="info">
-                    <h2>Person 4</h2>
-                    <p>Project Manager ensuring timely delivery and excellent outcomes.</p>
+                    <h2>TAYO Networking Inc.’s Employers</h2>
+                    <p>Anonymous voices communicating through laptops, representing the powerful and morally ambiguous nature of the company.</p>
                 </div>
+                </div>
+                <div class="team-member member-5">
+                    <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 5">
+                    <div class="info">
+                        <h2>Kiko, Jessy, and Romy</h2>
+                        <p>Fictional personas created by the narrator to perform trolling activities online. Over time, they become so developed that they almost feel alive.</p>
+                    </div>
+                </div>
+                <div class="team-member member-6">
+                    <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 6">
+                    <div class="info">
+                        <h2>Manong Taxi Driver</h2>
+                        <p>A talkative driver who claims familiarity with TAYO Networking Inc. and its supposed benefits.</p>
+                    </div>
+                </div>
+                <div class="team-member member-7">
+                    <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 7">
+                    <div class="info">
+                        <h2>Other Social Media Users</h2>
+                        <p>Indirectly present, they interact with and are influenced by the personas created by the narrator.</p>
+                    </div>
             </div>
         </div>
     </section>
