--- a/characters.html
+++ b/characters.html
@@ -29,35 +29,35 @@
         <h1>Meet Our Team</h1>
         <div class="team-container">
             <div class="team-member member-1">
-                <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 1">
+                <img src="https://i.ibb.co/939kS1V/image.png" alt="Person 1">
                 <div class="info">
                     <h2>The Narrator/Protagonis</h2>
                     <p>A college graduate struggling to find purpose and meaning, eventually employed as an online troll by TAYO Networking Inc.</p>
                 </div>
             </div>
             <div class="team-member member-2">
-                <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 2">
+                <img src="https://img.freepik.com/premium-vector/flat-woman-head-shadow-shape-with-question-mark-isolated-white-background-simple-vector-dilemma-concept-illustration_550143-758.jpg" alt="Person 2">
                 <div class="info">
                     <h2>The Narrator’s Mother</h2>
                     <p>A supportive but initially demanding figure who pushes the narrator toward a more stable career.</p>
                 </div>
             </div>
             <div class="team-member member-3">
-                <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 3">
+                <img src="https://i.ibb.co/SrTBrLR/image.png" alt="Person 3">
                 <div class="info">
                     <h2>Receptionist at TAYO Networking Inc</h2>
                     <p>A cheerful guide who escorts the narrator to the interview and sets the tone of professionalism for the company.</p>
                 </div>
             </div>
             <div class="team-member member-4">
-                <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 4">
+                <img src="https://i.ibb.co/SrTBrLR/image.png" alt="Person 4">
                 <div class="info">
                     <h2>TAYO Networking Inc.’s Employers</h2>
                     <p>Anonymous voices communicating through laptops, representing the powerful and morally ambiguous nature of the company.</p>
                 </div>
                 </div>
                 <div class="team-member member-5">
-                    <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 5">
+                    <img src="https://i.ibb.co/SrTBrLR/image.png" alt="Person 5">
                     <div class="info">
                         <h2>Kiko, Jessy, and Romy</h2>
                         <p>Fictional personas created by the narrator to perform trolling activities online. Over time, they become so developed that they almost feel alive.</p>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="team-member member-7">
-                    <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 7">
+                    <img src="https://i.ibb.co/SrTBrLR/image.png" alt="Person 7">
                     <div class="info">
                         <h2>Other Social Media Users</h2>
                         <p>Indirectly present, they interact with and are influenced by the personas created by the narrator.</p>
