--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="https://i.ibb.co/wzmFxgF/image.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>Home</title>
 </head>
@@ -122,14 +123,6 @@
             <div class="member-card">
                 <img src="https://i.ibb.co/BKMVBh1/image.png" alt="Member 13">
                 <h3>Mamayabay, Britney Jane C.</h3>
-            </div>
-            <div class="member-card">
-                <img src="" alt="Member 14">
-                <h3>Acap, </h3>
-            </div>
-            <div class="member-card">
-                <img src="https://media.discordapp.net/attachments/1288083043671605299/1310098999411478629/received_1686368732165124.jpg?ex=6743fc45&is=6742aac5&hm=6d20213635354b1efd1df0c00b5951db0781095462cfcfbf696a5a9b6b0274a3&=&format=webp&width=351&height=468" alt="Member 15">
-                <h3>Agustin, </h3>
             </div>
         </div>
     </div>
