--- a/plot.html
+++ b/plot.html
@@ -23,6 +23,33 @@
             </div>
         </nav>
 
+        <div class="plot">
+            <h1>PLOT</h1>
+
+            <pre>
+                The story “Troll” was made by Nicko Manipis de Guzman. "It's about an unemployed 
+                millennial who applied for a job with an outsourcing firm, only to find out 
+                that they hire trolls."This short story is titled Troll because of the Troll 
+                of the main character the story revolves around. Shows the cause why they 
+                became that way, what the consequences of their deception will be, and 
+                what the impact will be on the people they believe in. The characters in 
+                the story Kiko, Jessy, and Ronny are the three identities of the main character
+                in "Troll." Kiko is snarky and has a foul mouth when talking, Ronny is his 
+                conversations, and Jessica is always dramatic. The setting in the story is At 
+                TAYO Networking Inc. Main Headquarters, #1 Balimbing Street, WE Development 
+                Corporation Village Quezon City house.The conflict in this story is primarily 
+                about the person vs. self because the protagonist's opponent/enemy is his 
+                ambition to be wealthy, even though he feels terrible for being a media troll. 
+                I think that the story is symbolized by a mask because it tells us how one 
+                of the characters changed his personality to fit the needs of his job. 
+                It's as if he's spent his entire life putting on a mask to pretend to 
+                be someone else and forgetting who he really is. The main theme of this story 
+                is Life is always full of ways to cope, and a change of lifestyle could be 
+                the start of greater things to come. Change begins with you, not with others. 
+                You should never pretend to be someone you are not. This story also provides social 
+                awareness impact and influence of social media.
+            </pre>
+        </div>
         
 
 </body>
