--- a/pov.html
+++ b/pov.html
@@ -23,6 +23,24 @@
             </div>
         </nav>
 
+
+        <div class="plot">
+            <h1>Point of View</h1>
+            <pre>
+            The story of Nico Manipis de Guzman in Troll highlights how the work 
+            of a social media troll affects his life and identity. Nico creates fake 
+            online personas—Kiko (rude and sarcastic), Ronnie (fun and vulgar), and Jessica 
+            (weird)—to carry out his company’s deceitful tasks. These "masks" allow him to 
+            hide his true self but ultimately lead to a loss of identity. Despite his 
+            desire for wealth, he feels guilt for spreading lies and harming others.
+
+            The narrative emphasizes how pretending to be someone else can damage both 
+            oneself and others. It conveys a moral lesson about staying true to oneself
+            and avoiding harm for personal gain. The story also critiques the powerful 
+            yet destructive influence of social media in today’s world, urging change and 
+            authenticity from within.
+            </pre>
+        </div>
         
 
 </body>
