--- a/setting.html
+++ b/setting.html
@@ -23,7 +23,16 @@
             </div>
         </nav>
 
-        
+        <div class="setting">
+            <h1>SETTING</h1>
+            <pre>
+                •Quezon City.
+                •TAYO  Networking  Inc.  Main  Headquarters,  #1  Balimbing  Street, 
+                 TAYO Development Corporation Village, Quezon City.
+                 Saturday, 4:15pm – 5:00pm.
+                •TAYO Development Corporation Village, Quezon City.
+            </pre>
+        </div>
 
 </body>
 </html>
