--- a/story.html
+++ b/story.html
@@ -59,8 +59,7 @@
                 atensyon ko do’n. O dahil siguro hindi ko na nga kailangang 
                 masyadong mag-isip kaya ako nakakalma. Ewan ko, ang labo. 
                 Basta, nawala ang isip ko no’n sa kung kuntento ba ‘ko sa buhay 
-                ko. Nawala ako sa paulit-ulit na mekanismo; pinaamo ang utak 
-                ko.
+                ko. Nawala ako sa paulit-ulit na mekanismo; pinaamo ang utak ko.
                 E, nagsawa ako. Bumalik ‘yung pag-iisip ko. Siguro 
                 pangatlong buwan ko na no’n sa agency. Naburyong ako sa 
                 trabaho, nainis. Minsan nga, nasa internet na lang ako, inaaliw 
@@ -85,8 +84,7 @@
                 community to invest on compelling discourse about pressing 
                 issues and stake controversial opinions on local and 
                 international topics.”
-                Ay, wow, ingles. Mukhang opisyal, nasa ingles ‘yung 
-                sulat.
+                Ay, wow, ingles. Mukhang opisyal, nasa ingles ‘yung sulat.
                 “It is a happy day that we announce that after careful and long 
                 screening of your profile, we have chosen YOU to be part of 
                 this growing community of entrepreneur-communicators of this 
@@ -146,8 +144,7 @@
                 nang maigi ng pulis, matagal. Tsaka nginitian.
                 “Welcome sa TAYO Networking Inc. Handa na ang mga 
                 boss sa conference room. Dumiretso ka lang sa main office 
-                building at lapitan ang receptionist. Maghintay ka lang sa labas 
-                ng kwarto.”
+                building at lapitan ang receptionist. Maghintay ka lang sa labas ng kwarto.”
                 Irorolyo ko na sana pababa ang bintana, biglang may 
                 pahabol pa ang pulis: “May aplikante rin pala bago sa iyo na 
                 lalabas sa conference room. Bawal magusap, estriktong 
@@ -184,8 +181,8 @@
                 networking na kumpanya ‘to, minumulto. Do’n lang talaga ako 
                 napaisip na baka niloloko lang ako nito. Ano ‘yung pinagsasabi 
                 nilang “growing community”, nasaan? Wala na akong 
-                magagawa, wala nang atrsan ito. Ilang metro na lang, nasa 
-                harapan na ako ng gusali.
+                magagawa, wala nang atrsan ito. Ilang metro na lang, 
+                nasa harapan na ako ng gusali.
                 Mahaba rin ang entrada ng gusali. Ang hilig naman sa 
                 ganito ang lugar na ito, nakakasuya. Isang mataas na pintong 
                 gawa sa kristal ang tumambad sa harapan ng gusali. Nakita ko 
@@ -231,8 +228,7 @@
                 applicant for today and will only be getting in contact with one 
                 person here but rules are rules. Strict protocol!” Nag-iba ang 
                 tono ng babae, nawala ang saya sa mata nang sabihin niya ‘yun. 
-                Pero, bigla agad siyang ngumiti. At tuluyan nang nagsara ang 
-                elevator.
+                Pero, bigla agad siyang ngumiti. At tuluyan nang nagsara ang elevator.
                 Tumingin ako sa waiting area. Walang laman maliban sa 
                 couch na itim, mesang kristal, water dispenser sa gilid, at maliit 
                 na basurahan sa tabi nito. Wala man lang magazine sa mesa. 
@@ -240,8 +236,7 @@
                 magugulo at nagtataasang mga gusali at bahay ng Quezon City 
                 at ang sanga-sangang mga kable ng mga poste at highway. Ay, 
                 oo nga, nasa Maynila pa rin pala ako. Masyado akong nawili sa 
-                lugar na ito. Nakalimutan kong nasa Quezon City pa rin pala 
-                ako.
+                lugar na ito. Nakalimutan kong nasa Quezon City pa rin pala ako.
                 Pagkatapos kong aliwin ang sarili ko sa dalawang baso 
                 ng tubig at paglalakad, bumukas ang pinto. Lalaking nakapolo 
                 rin, slacks, at black shoes. Mukha siyang masaya. Nawala nang 
@@ -321,7 +316,7 @@
                 “Your starting salary will be 30, 000 pesos. Per month.”
                 Tumaginting ang mga mata ko. Ito na ‘yun.
                 “Kailan ako pwedeng magsimula?”
-                Tawanan lang sila. Bukas na bukas raw ay pwedengpwede na 
+                Tawanan lang sila. Bukas na bukas raw ay pwedeng-pwede na 
                 dahil hindi naman ito desk job na kailangang puntahan 
                 araw-araw sa main office. “Work from home,” ‘ika nga nila. 
                 Ako na raw ang bahala sa paggawa ng mga persona, hindi naman 
@@ -330,24 +325,23 @@
                 Kinagabihan, nakagawa na ako ng tatlo. Si Kiko, si 
                 Jessy, at si Romy. Kumukuha lang ako ng random na litrato sa 
                 Google para sa mga profile pictures nila. Minsan nga, hindi na 
-                kailangang tao, e. Kahit cartoons o kotse. O sunset. Pareparehong 
+                kailangang tao, e. Kahit cartoons o kotse. O sunset. Pare-parehong 
                 pangalan pero iba-ibang picture kada social media site. 
                 Iyong mga nilalagay naman naming comment, copy-paste lang 
                 ‘yun galing sa agency na tinitingnan na lang namin kung akma 
                 ba do’n sa post. Kaya, hindi ko kailangang mag-isip. Pero, 
-                Malaki ang bayad—mas malaki kahit sa ano pang 
-                pinagtrabahuhan at inaplayan ko. Kaya, okay na lang rin kahit 
-                paulit-ulit.
+                Malaki ang bayad—mas malaki kahit sa ano pang pinagtrabahuhan 
+                at inaplayan ko. Kaya, okay na lang rin kahit paulit-ulit.
                 Sa taas ng sahod, wala na yata akong mairereklamo. 
                 Nabibili ko na ang lahat ng gusto ko: mamahaling damit na may 
                 tatak ng Armani, Polo, Marks & Spencer, masasarap na pagkain 
                 na tatlo ang digit sa menu kada plato, at sangkatutak na gadget 
                 na iba’t iba ang laki ng iskrin. S’yempre, ‘yung mga gadget ay 
                 para na rin sa trabaho pero para talaga sa mga apps ko ‘yun. 
-                Gusto ko sana ng kotse at condo kaso kapag gusto kong magipon, 
+                Gusto ko sana ng kotse at condo kaso kapag gusto kong mag-ipon, 
                 tumataginting na naman mga mata ko sa mga 
                 dagatdagatang mga bagay sa mall.
-                Nagtaka ang maraming tao sa paligid ko sa biglaang pagiba ng buhay ko. 
+                Nagtaka ang maraming tao sa paligid ko sa biglaang pag-iba ng buhay ko. 
                 Basta ang sinasabi ko, bagong trabaho. Wala 
                 na rin naman silang maitatanong pa kasi nakikinabang sila dahil 
                 panay ang libre ko. Nako, lalo na mama ko, may bagong blouse
@@ -384,8 +378,7 @@
                 raw ang dulot ng Martial Law ni Marcos kahit pa ibinaon niya 
                 ang Pilipinas sa malalalim na utang at pumatay ng marami para 
                 sa “bagong lipunan.” Gusto kong itigil pero pagdating ng 
-                sweldo, nawawala lahat ng pangamba ko. Iba nagagawa ng pera, 
-                grabe.
+                sweldo, nawawala lahat ng pangamba ko. Iba nagagawa ng pera, grabe.
                 Akala ko wala na akong mairereklamo: masaya na ako, 
                 ang dami kong bagay, nasa akin na lahat ng gusto ko. Kaso, 
                 nalunod ako sa mga materyal na bagay. Nagsawa ako sa mga 
