--- a/characters.html
+++ b/characters.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="team-member member-6">
-                    <img src="https://th.bing.com/th/id/OIP.QjynegEfQVPq5kIEuX9fWQHaFj?rs=1&pid=ImgDetMain" alt="Person 6">
+                    <img src="https://i.ibb.co/SrTBrLR/image.png" alt="Person 6">
                     <div class="info">
                         <h2>Manong Taxi Driver</h2>
                         <p>A talkative driver who claims familiarity with TAYO Networking Inc. and its supposed benefits.</p>
