--- a/theme.html
+++ b/theme.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/theme.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="https://i.ibb.co/wzmFxgF/image.png" type="image/x-icon" />
     <title>Theme</title>
 </head>
 <body>
@@ -23,6 +24,19 @@
             </div>
         </nav>
 
+
+        <div class="conflict">
+            <h1>Theme</h1>
+
+            <pre>
+                The theme of the story highlights that not everything
+                we see on the internet  true. The story explores how
+                people exploit  others for personal gain, hiding behind
+                anonymous identity to manipulate and deceive. Ultimately,
+                the story emphasizes digital responsibility, encouraging
+                users to verify information and to treat others with sincerity 
+                and respect.
+            </pre>
         
 
 </body>
