--- a/conflict.html
+++ b/conflict.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/conflict.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="https://i.ibb.co/wzmFxgF/image.png" type="image/x-icon" />
     <title>Conflict</title>
 </head>
 <body>
@@ -27,17 +28,22 @@
             <h1>Conflict</h1>
 
             <pre>
-                The story of Nico Manipis de Guzman, Troll, shows how the work of a 
-                social media troll affects  his life and identity. The main character 
-                works for a company that uses trolls to spread lies and bully people online. 
-                To suit the task, he creates three fake characters: Kiko, who is rude and 
-                sarcastic Ronnie, who is fun and vulgar and Jessica, who is too weird These fake identities 
-                show how she hides behind the “mask,” losing himself he is. He wants to be rich, however 
-                feels guilty for conning people into trolls. Making up a story and pretending to be a 
-                person else cannot simplest harm ourselves but also can hurt others. 
-                It reminds us to be proper to ourselves and now not hurt others for our very own desires. The name 
-                teaches us that change starts offevolved within, and we must learn to live authentically. It shows the 
-                powerful and now and again unfavorable have an impact on of social media today in the world
+                The story of Nico Manipis de Guzman, Troll, shows how the work 
+                of a social media troll affects  his life and identity. The 
+                main character works for a company that uses trolls to spread
+                lies and bully people online. To suit the task, he creates
+                three fake characters: Kiko, who is rude and sarcastic Ronnie,
+                who is fun and vulgar and Jessica, who is too weird These 
+                fake identities show how she hides behind the “mask,” losing 
+                himself he is. He wants to be rich, however feels guilty
+                for conning people into trolls.Making up a story and
+                pretending to be a person else cannot simplest harm
+                ourselves but also can hurt others. It reminds us to be
+                proper to ourselves and now not hurt others for our very
+                own desires. The name teaches us that change starts offevolved
+                within, and we must learn to live authentically. 
+                It shows the powerful and now and again unfavorable have an impact 
+                on of social media today in the world
             </pre>
         </div>
         
