--- a/setting.html
+++ b/setting.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/setting.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="https://i.ibb.co/wzmFxgF/image.png" type="image/x-icon" />
     <title>Setting</title>
 </head>
 <body>
